website/versioned_docs/version-2.7.x/reference/subsystems/python-setup.mdx
---
title: python-setup
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options for Pants&#x27;s Python support.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[python-setup]`</span>

<span className={styles.options}>

## Basic options
None

## Advanced options

### `interpreter_constraints`

<Option
  cli_repr={`--python-setup-interpreter-constraints="[<requirement>, <requirement>, ...]"`}
  env_repr='PANTS_PYTHON_SETUP_INTERPRETER_CONSTRAINTS'
  default_repr={`["CPython>=3.6,<4"]`}
>

The Python interpreters your codebase is compatible with.

Specify with requirement syntax, e.g. &#x27;CPython&gt;=2.7,&lt;3&#x27; (A CPython interpreter with version &gt;=2.7 AND version &lt;3) or &#x27;PyPy&#x27; (A pypy interpreter of any version). Multiple constraint strings will be ORed together.

These constraints are used as the default value for the `interpreter_constraints` field of Python targets.

</Option>

### `interpreter_versions_universe`

<Option
  cli_repr={`--python-setup-interpreter-versions-universe="['<str>', '<str>', ...]"`}
  env_repr='PANTS_PYTHON_SETUP_INTERPRETER_VERSIONS_UNIVERSE'
  default_repr={`[\n  "2.7",\n  "3.5",\n  "3.6",\n  "3.7",\n  "3.8",\n  "3.9",\n  "3.10"\n]`}
>

All known Python major/minor interpreter versions that may be used by either your code or tools used by your code.

This is used by Pants to robustly handle interpreter constraints, such as knowing when generating lockfiles which Python versions to check if your code is using.

This does not control which interpreter your code will use. Instead, to set your interpreter constraints, update `[python-setup].interpreter_constraints`, the `interpreter_constraints` field, and relevant tool options like `[isort].interpreter_constraints` to tell Pants which interpreters your code actually uses. See https://www.pantsbuild.org/v2.7/docs/python-interpreter-compatibility.

All elements must be the minor and major Python version, e.g. &#x27;2.7&#x27; or &#x27;3.10&#x27;. Do not include the patch version.


</Option>

### `requirement_constraints`

<Option
  cli_repr={`--python-setup-requirement-constraints=<file_option>`}
  env_repr='PANTS_PYTHON_SETUP_REQUIREMENT_CONSTRAINTS'
  default_repr={`None`}
>

When resolving third-party requirements for your own code (vs. tools you run), use this constraints file to determine which versions to use.

This only applies when resolving user requirements, rather than tools you run like Black and Pytest. To constrain tools, set `[tool].lockfile`, e.g. `[black].lockfile`.

See https://pip.pypa.io/en/stable/user_guide/#constraints-files for more information on the format of constraint files and how constraints are applied in Pex and pip.

Mutually exclusive with `[python-setup].experimental_lockfile`.

</Option>

### `resolve_all_constraints`

<Option
  cli_repr={`--[no-]python-setup-resolve-all-constraints`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVE_ALL_CONSTRAINTS'
  default_repr={`True`}
>

If enabled, when resolving requirements, Pants will first resolve your entire constraints file as a single global resolve. Then, if the code uses a subset of your constraints file, Pants will extract the relevant requirements from that global resolve so that only what&#x27;s actually needed gets used. If disabled, Pants will not use a global resolve and will resolve each subset of your requirements independently.

Usually this option should be enabled because it can result in far fewer resolves.

Requires [python-setup].requirement_constraints to be set.

</Option>

### `experimental_lockfile`

<Option
  cli_repr={`--python-setup-experimental-lockfile=<file>`}
  env_repr='PANTS_PYTHON_SETUP_EXPERIMENTAL_LOCKFILE'
  default_repr={`None`}
>

The lockfile to use when resolving requirements for your own code (vs. tools you run).

This is highly experimental and will change, including adding support for multiple lockfiles. This option&#x27;s behavior may change without the normal deprecation cycle.

To generate a lockfile, activate the backend `pants.backend.experimental.python`and run `./pants generate-user-lockfile ::`.

Mutually exclusive with `[python-setup].requirement_constraints`.

</Option>

### `invalid_lockfile_behavior`

<Option
  cli_repr={`--python-setup-invalid-lockfile-behavior=<InvalidLockfileBehavior>`}
  env_repr='PANTS_PYTHON_SETUP_INVALID_LOCKFILE_BEHAVIOR'
  one_of='error, ignore, warn'
  default_repr={`error`}
>

The behavior when a lockfile has requirements or interpreter constraints that are not compatible with what the current build is using.

We recommend keeping the default of `error` for CI builds.

</Option>

### `interpreter_search_paths`

<Option
  cli_repr={`--python-setup-interpreter-search-paths="[<binary-paths>, <binary-paths>, ...]"`}
  env_repr='PANTS_PYTHON_SETUP_INTERPRETER_SEARCH_PATHS'
  default_repr={`[\n  "<PYENV>",\n  "<PATH>"\n]`}
>

A list of paths to search for Python interpreters that match your project&#x27;s interpreter constraints. You can specify absolute paths to interpreter binaries and/or to directories containing interpreter binaries. The order of entries does not matter. The following special strings are supported:

* &quot;&lt;PATH&gt;&quot;, the contents of the PATH env var
* &quot;&lt;ASDF&gt;&quot;, all Python versions currently configured by ASDF (asdf shell, $&#123;HOME&#125;/.tool-versions), with a fallback to all installed versions
* &quot;&lt;ASDF_LOCAL&gt;&quot;, the ASDF interpreter with the version in BUILD_ROOT/.tool-versions
* &quot;&lt;PYENV&gt;&quot;, all Python versions under $(pyenv root)/versions
* &quot;&lt;PYENV_LOCAL&gt;&quot;, the Pyenv interpreter with the version in BUILD_ROOT/.python-version
* &quot;&lt;PEXRC&gt;&quot;, paths in the PEX_PYTHON_PATH variable in /etc/pexrc or ~/.pexrc

</Option>

### `resolver_manylinux`

<Option
  cli_repr={`--python-setup-resolver-manylinux=<str>`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVER_MANYLINUX'
  default_repr={`manylinux2014`}
>

Whether to allow resolution of manylinux wheels when resolving requirements for foreign linux platforms. The value should be a manylinux platform upper bound, e.g.: &#x27;manylinux2010&#x27;, or else the string &#x27;no&#x27; to disallow.

</Option>

### `resolver_jobs`

<Option
  cli_repr={`--python-setup-resolver-jobs=<int>`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVER_JOBS'
  default_repr={`#cores/2`}
>

The maximum number of concurrent jobs to build wheels with.

Because Pants can run multiple subprocesses in parallel, the maximum total parallelism will be `--process-execution-{local,remote}-parallelism x --python-setup-resolver-jobs`. 

Setting this option higher may result in better parallelism, but, if set too high, may result in starvation and Out of Memory errors.

</Option>

### `tailor_ignore_solitary_init_files`

<Option
  cli_repr={`--[no-]python-setup-tailor-ignore-solitary-init-files`}
  env_repr='PANTS_PYTHON_SETUP_TAILOR_IGNORE_SOLITARY_INIT_FILES'
  default_repr={`True`}
>

Don&#x27;t tailor python_library targets for solitary __init__.py files, as those usually exist as import scaffolding rather than true library code.

Set to False if you commonly have packages containing real code in __init__.py and there are no other .py files in the package.

</Option>

### `tailor_pex_binary_targets`

<Option
  cli_repr={`--[no-]python-setup-tailor-pex-binary-targets`}
  env_repr='PANTS_PYTHON_SETUP_TAILOR_PEX_BINARY_TARGETS'
  default_repr={`True`}
>

Tailor pex_binary() targets for Python entry point files.

</Option>

## Deprecated options

None

</span>